(fix) Fix View timeline button spacing in results viewer

--- a/packages/esm-patient-labs-app/src/test-results/individual-results-table/individual-results-table.scss
+++ b/packages/esm-patient-labs-app/src/test-results/individual-results-table/individual-results-table.scss
@@ -105,6 +105,7 @@ p {
 .viewTimeline {
   display: flex;
   margin-left: auto;
+  margin-top: -(layout.$spacing-02);
 }
 
 .cardTitle {
